# goqu

./: .gitignore  DESIGN.md  LICENSE  README.md  ROADMAP.md  checklist.md  config.py  design_journal.md  goqu.sln  logging_config.py  main.py  pyproject.toml
data/: cache.py  data.sql  database.py  downloader.py  events.py  journal.sql  validation.py
data/providers/: __init__.py  alpha_vantage_provider.py  base.py  polygon_provider.py  yfinance_provider.py
data/repositories/: __init__.py  accounts.py  analytics.py  assets.py  cache_meta.py  cash.py  corporate_actions.py  income.py  market_data.py  portfolios.py  reference.py
goqu/: App.axaml  App.axaml.cs  ExistingAccount.axaml  ExistingAccount.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NewAccount.axaml  NewAccount.axaml.cs  Program.cs  app.manifest  goqu.csproj
goqu/Models/: TradeRecord.cs
goqu/Services/: JournalService.cs
goqu/Views/: HomeView.axaml  HomeView.axaml.cs
goqu/Views/EdgeDiscovery/: EdgeDiscoveryView.axaml  EdgeDiscoveryView.axaml.cs
goqu/Views/Income/: IncomeView.axaml  IncomeView.axaml.cs
goqu/Views/Journal/: AnalyticsTab.axaml  AnalyticsTab.axaml.cs  CloseTradeWindow.axaml  CloseTradeWindow.axaml.cs  JournalView.axaml  JournalView.axaml.cs  NewTradeWindow.axaml  NewTradeWindow.axaml.cs  OverviewTab.axaml  OverviewTab.axaml.cs  TradeLogTab.axaml  TradeLogTab.axaml.cs
goqu/Views/QuantAnalysis/: QuantAnalysisView.axaml  (+1 more)
ui/: MainWindow.py  data_pull.ui  data_source_dialog.py  first_run_wizard.py  portfolio_detail_view.py  portfolios_view.py  theme.py  transactions_view.py
(+4 files in other folders)
