[project]
name = "goqu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "black>=26.5.1",
    "cvxpy>=1.9.2",
    "matplotlib>=3.11.0",
    "mypy>=2.2.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic-settings>=2.14.2",
    "pyside6>=6.11.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[project.scripts]
goqu = "main:main"
